fixed overflowing

--- a/src/components/BreadcrumbsBar/BreadcrumbItem/BreadcrumbItem.scss
+++ b/src/components/BreadcrumbsBar/BreadcrumbItem/BreadcrumbItem.scss
@@ -2,5 +2,7 @@
 @import "../../../styles/states.scss";
 
 .breadcrumbItem--wrapper {
+  display: inline-flex;
+  overflow: hidden;  
   list-style-type: none;
 }
